k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fintranzo
  labels:
    name: fintranzo
    environment: production
