k8s/test-job.yaml
apiVersion: v1
kind: Service
metadata:
  name: fintranzo-test-service
spec:
  selector:
    app: fintranzo-test
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
